# redpanda

./: .bazelignore  .bazelrc  .clang-tidy  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .ruff.toml  BUILD  CLAUDE.md  MODULE.bazel  README.md  buf.gen.openapi.yaml  buf.gen.yaml  buf.yaml  lsan_suppressions.txt
.github/: CODEOWNERS  (+2 more)
src/v/cloud_topics/: BUILD  CMakeLists.txt  README.md  api.h  app.cc  app.h  app_impl.cc  cluster_services.h  data_plane_api.h  data_plane_impl.cc  data_plane_impl.h  ephemeral_cluster_services.h  errc.h  log_reader_config.cc  log_reader_config.h  object_utils.cc  object_utils.h  state_accessors.h  test_fixture_cfg.h  topic_manifest_upload_manager.cc  topic_manifest_upload_manager.h  types.cc  types.h
src/v/cloud_topics/L0_read_path/: BUILD  placeholder_extent_reader.cc  placeholder_extent_reader.h
src/v/cloud_topics/batch_cache/: BUILD  batch_cache.cc  batch_cache.h
src/v/cloud_topics/batch_cache/tests/: batch_cache_test.cc
src/v/cloud_topics/batcher/: BUILD  aggregator.h
src/v/cloud_topics/batcher/tests/: BUILD  aggregator_test.cc  batcher_test.cc
src/v/cloud_topics/core/: BUILD  pipeline_stage.cc  pipeline_stage.h  read_request.h  write_request.cc  write_request.h
src/v/cloud_topics/core/tests/: BUILD  event_filter_test.cc  pipeline_bench.cc  serializer_test.cc  write_pipeline_test.cc
src/v/cloud_topics/dl_stm/: dl_stm.h  dl_stm_api.cc  dl_stm_api.h  dl_stm_factory.cc  dl_stm_factory.h
src/v/cloud_topics/dl_stm/tests/: BUILD  dl_stm_test.cc
src/v/cloud_topics/frontend/: BUILD  frontend.cc  frontend.h
src/v/cloud_topics/frontend/tests/: frontend_test.cc
src/v/cloud_topics/housekeeper/: BUILD  housekeeper.cc  housekeeper.h  manager.cc
src/v/cloud_topics/housekeeper/tests/: housekeeper_test.cc
src/v/cloud_topics/level_one/: BUILD  control_plane.cc  control_plane.h  metastore.h  object.cc  object.h  simple_metastore.cc  simple_metastore.h  state.cc  state.h  state_update.cc  state_update.h
src/v/cloud_topics/level_one/common/: BUILD  abstract_io.cc  abstract_io.h  fake_io.cc  fake_io.h  file_io.cc  file_io.h  object.cc  object.h  single_flight.h
src/v/cloud_topics/level_one/compaction/: BUILD  committer.cc  committer.h  log_collector.cc  log_collector.h  log_info_collector.cc  log_info_collector.h  logger.h  meta.h  scheduler.cc  scheduler.h  scheduling_policies.h  sink.cc  sink.h  source.cc  source.h  worker.cc  worker.h  worker_manager.cc  worker_manager.h  worker_probe.cc
src/v/cloud_topics/level_one/domain/: BUILD  db_domain_manager.cc  db_domain_manager.h  domain_manager.cc  domain_manager.h  domain_supervisor.cc  domain_supervisor.h  simple_domain_manager.cc  simple_domain_manager.h
src/v/cloud_topics/level_one/frontend_reader/: BUILD  l1_reader_cache.cc  l1_reader_cache.h  level_one_reader.cc  level_one_reader.h  reader.cc  reader.h
src/v/cloud_topics/level_one/maintenance/: BUILD  keyed_priority_queue.h  l1_object_sink.cc  l1_object_sink.h  log_collector.cc  log_info_collector.cc  log_info_collector.h  meta.h  scheduler.cc  scheduler.h  scheduler_probe.cc  scheduler_probe.h  scheduling_policies.cc  scheduling_policies.h  worker.cc  worker.h  worker_manager.cc  worker_manager.h  worker_probe.cc  worker_probe.h
src/v/cloud_topics/level_one/metastore/: BUILD  extent_metadata_reader.cc  frontend.cc  frontend.h  leader_router.cc  leader_router.h  leader_router_probe.cc  leader_router_probe.h  leveling_range_builder.h  manifest_io.cc  manifest_io.h  metastore.h  metastore_manifest.h  offset_interval_map.h  offset_interval_set.cc  offset_interval_set.h  partition_validator.cc  replicated_metastore.cc  replicated_metastore.h  retry.h  rpc.json  rpc_types.h  service.cc  service.h  simple_metastore.cc  simple_metastore.h  simple_stm.cc  simple_stm.h  state.h  state_update.cc  state_update.h  topic_purger.cc
src/v/cloud_topics/level_one/tests/: BUILD  object_test.cc  simple_metastore_test.cc  state_test.cc  state_update_test.cc
src/v/cloud_topics/level_zero/: BUILD  ctp_stm.cc  ctp_stm.h  ctp_stm_api.cc  ctp_stm_api.h  ctp_stm_commands.h  ctp_stm_factory.cc  ctp_stm_factory.h  ctp_stm_offsets.h  ctp_stm_state.cc  ctp_stm_state.h
src/v/cloud_topics/level_zero/batcher/: BUILD  aggregator.cc  aggregator.h  batcher.cc  batcher.h
src/v/cloud_topics/level_zero/cluster_services_impl/: BUILD  cluster_services.h
src/v/cloud_topics/level_zero/common/: BUILD  extent_meta.h  level_zero_probe.cc  level_zero_probe.h  producer_queue.cc
src/v/cloud_topics/level_zero/frontend_reader/: BUILD  level_zero_reader.cc  level_zero_reader.h  reader.cc  reader.h
src/v/cloud_topics/level_zero/gc/: BUILD  level_zero_gc.cc  level_zero_gc.h  level_zero_gc_probe.cc  level_zero_gc_probe.h  level_zero_gc_types.h
src/v/cloud_topics/level_zero/notifier/: BUILD  level_zero_notifier.cc  level_zero_notifier.h  notifier_routing.h
src/v/cloud_topics/manager/: BUILD  manager.cc  manager.h
src/v/cloud_topics/objects/: BUILD  level_one_object.cc  level_one_object.h
src/v/cloud_topics/read_path/: BUILD  fetch_request_handler.cc  fetch_request_handler.h  materialized_extent_reader.cc  materialized_extent_reader.h  placeholder_extent.cc  placeholder_extent.h  placeholder_extent_reader.cc  placeholder_extent_reader.h
src/v/cloud_topics/read_replica/: BUILD  snapshot_manager.cc  snapshot_metastore.cc  snapshot_metastore.h  stm.cc  stm.h
src/v/cloud_topics/reconciler/: BUILD  adaptive_interval.cc  adaptive_interval.h  range_batch_consumer.cc  range_batch_consumer.h  reconciler.cc  reconciler.h  reconciler_probe.cc  reconciler_probe.h  reconciliation_source.cc  reconciliation_source.h
src/v/cloud_topics/tests/: BUILD  cluster_fixture.h  cluster_recovery_test.cc  end_to_end_test.cc  leader_epoch_test.cc  object_utils_test.cc  types_test.cc
src/v/cloud_topics/throttler/: throttler.cc
src/v/crash_tracker/: BUILD  CMakeLists.txt  prepared_writer.cc  prepared_writer.h  recorder.cc  recorder.h  types.cc  types.h
src/v/crash_tracker/tests/: BUILD  CMakeLists.txt  crash_reporter_oom_test.cc  limiter_test.cc  recorder_test.cc
(+3026 files in other folders)
