module(
    name = "redpanda",
    repo_name = "com_github_redpanda_data_redpanda",
)

bazel_dep(name = "rules_boost", repo_name = "com_github_nelhage_rules_boost")
archive_override(
    module_name = "rules_boost",
    integrity = "sha256-ICuTlyfxD3u1tr12YyeT5qPcA/ZkEUvtMDA2ZRzz1zc=",
    strip_prefix = "rules_boost-e23cc59f87d5049618472d6ce0ca0ed5ef0c23dc",
    urls = ["https://github.com/nelhage/rules_boost/archive/e23cc59f87d5049618472d6ce0ca0ed5ef0c23dc.tar.gz"],
)

non_module_boost_repositories = use_extension("@com_github_nelhage_rules_boost//:boost/repositories.bzl", "non_module_dependencies")
use_repo(
    non_module_boost_repositories,
    "boost",
)

bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "abseil-cpp", version = "20250127.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "crc32c", version = "1.1.0")
bazel_dep(name = "fmt", version = "9.1.0")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "liburing", version = "2.5")
bazel_dep(name = "lz4", version = "1.9.4")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "protobuf", version = "29.1")
single_version_override(
    module_name = "protobuf",
    patch_strip = 1,
    # this patch is in upstream protobuf, so should be in an upcoming release.
    patches = [
        "//bazel/thirdparty:protobuf_capture_warning.patch",
        "//bazel/thirdparty:0001-protobuf-handle-map-entry.patch",
    ],
)

bazel_dep(name = "re2", version = "2024-07-02")
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_rust", version = "0.57.1")
bazel_dep(name = "snappy", version = "1.2.1")
bazel_dep(name = "yaml-cpp", version = "0.8.0")
bazel_dep(name = "zlib", version = "1.3.1.bcr.3")
bazel_dep(name = "zstd", version = "1.5.7")
bazel_dep(name = "patchelf", version = "0.18.0")
bazel_dep(name = "bzip2", version = "1.0.8.bcr.2")

bazel_dep(name = "buildifier_prebuilt", version = "7.3.1", dev_dependency = True)
bazel_dep(name = "rules_python", version = "1.0.0", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    extra_pip_args = ["--require-hashes"],
    hub_name = "python_deps",
    python_version = "3.12",
    requirements_lock = "//bazel/thirdparty:requirements.txt",
)
use_repo(pip, "python_deps")

non_module_dependencies = use_extension("//bazel:extensions.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "ada")
use_repo(non_module_dependencies, "avro")
use_repo(non_module_dependencies, "base64")
use_repo(non_module_dependencies, "c-ares")
use_repo(non_module_dependencies, "hdrhistogram")
use_repo(non_module_dependencies, "hwloc")
use_repo(non_module_dependencies, "jsoncons")
use_repo(non_module_dependencies, "krb5")
use_repo(non_module_dependencies, "libpciaccess")
use_repo(non_module_dependencies, "libprotobuf_mutator")
use_repo(non_module_dependencies, "libxml2")
use_repo(non_module_dependencies, "lksctp")
use_repo(non_module_dependencies, "openssl")
use_repo(non_module_dependencies, "openssl-fips")

# non-BCR rapidjson is used because BCR publishes v1.1.0 from 2016, and Redpanda
# depends on newer changes since the last tagged upstream version.
use_repo(non_module_dependencies, "rapidjson")
use_repo(non_module_dependencies, "roaring")
use_repo(non_module_dependencies, "seastar")
use_repo(non_module_dependencies, "unordered_dense")
use_repo(non_module_dependencies, "wasmtime")
use_repo(non_module_dependencies, "xxhash")
use_repo(non_module_dependencies, "x86_64_sysroot")
use_repo(non_module_dependencies, "aarch64_sysroot")

bazel_dep(name = "toolchains_llvm", version = "1.3.0")
archive_override(
    module_name = "toolchains_llvm",
    integrity = "sha256-tiSkUD4G/Zxkdm+TPSclElauijatg7jF9eqs8LvD6hw=",
    strip_prefix = "toolchains_llvm-e831f94a8b7f3a39391f5822adcab8e4d443c03b",
    urls = "https://github.com/bazel-contrib/toolchains_llvm/archive/e831f94a8b7f3a39391f5822adcab8e4d443c03b.tar.gz",
)

# ====================================
# LLVM toolchain
# ====================================

# NOTE: We build our toolchains on ubuntu:jammy so you're going to need a distro at least that old.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")

CXX_STANDARD = "c++23"

# This is based off of the default flags in toolchains_llvm
# https://github.com/bazel-contrib/toolchains_llvm/blob/69d39965/toolchain/cc_toolchain_config.bzl#L125-L137
COMMON_COMPILE_FLAGS = [
    "-U_FORTIFY_SOURCE",
    "-fstack-protector",
    "-fno-omit-frame-pointer",
    "-fcolor-diagnostics",
    "-Wall",
    "-Wthread-safety",
    "-Wself-assign",
]

COMPILE_FLAGS = {
    "linux-aarch64": [
        "--target=aarch64-unknown-linux-gnu",
        "-march=armv8-a+crc+crypto",
    ] + COMMON_COMPILE_FLAGS,
    "linux-x86_64": [
        "--target=x86_64-unknown-linux-gnu",
        "-march=westmere",
    ] + COMMON_COMPILE_FLAGS,
}

COMPILERS = {
    "18": {
        "tars": {
            "aarch64": {
                "build_date": "2025-03-10",
                "sha": "9f52789c5aee794d6f013249b6e003b50f72e4c3874fd656723a72bf9322eff9",
            },
            "x86_64": {
                "build_date": "2025-03-10",
                "sha": "51e547308112bc6671f391d03420c315b7c099238d797631e00374f1bd80712e",
            },
        },
        "version": "18.1.8",
    },
    "19": {
        "tars": {
            "aarch64": {
                "build_date": "2025-03-11",
                "sha": "7c1ab3b4981a9e5ec3e3af627a78dea4e9eb4208d362dcb8e4b8f5b521e44bd2",
            },
            "x86_64": {
                "build_date": "2025-03-11",
                "sha": "808fcade0610167c0c3afbecc7d4f642e4714496ea910ea06c53dd3fee00a0b0",
            },
        },
        "version": "19.1.7",
    },
}

[
    (
        llvm.toolchain(
            name = "llvm_{version}_toolchain".format(version = major_version),
            compile_flags = COMPILE_FLAGS,
            cxx_standard = {"": CXX_STANDARD},
            llvm_version = compiler["version"],
            sha256 = {
                "linux-" + arch: compiler["tars"][arch]["sha"]
                for arch in [
                    "aarch64",
                    "x86_64",
                ]
            },
            urls = {
                "linux-" + arch: ["https://github.com/redpanda-data/llvm-project/releases/download/llvmorg-{version}/llvm-{version}-debian-11-{arch}-{date}.tar.zst".format(
                    arch = arch,
                    date = compiler["tars"][arch]["build_date"],
                    version = compiler["version"],
                )]
                for arch in [
                    "aarch64",
                    "x86_64",
                ]
            },
        ),
        llvm.sysroot(
            name = "llvm_{version}_toolchain".format(version = major_version),
            label = "@x86_64_sysroot//:sysroot",
            targets = ["linux-x86_64"],
        ),
        llvm.sysroot(
            name = "llvm_{version}_toolchain".format(version = major_version),
            label = "@aarch64_sysroot//:sysroot",
            targets = ["linux-aarch64"],
        ),
        use_repo(llvm, "llvm_{version}_toolchain".format(version = major_version)),
        register_toolchains("@llvm_{version}_toolchain//:all".format(version = major_version)),
    )
    for (major_version, compiler) in COMPILERS.items()
]

# ====================================
# Go Toolchain
# ====================================
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.1")

# The microsoft compiler versions can be listed at their github release under the `asset.json` file
go_sdk.download(
    name = "go_sdk_with_systemcrypto",
    experiments = ["systemcrypto"],
    sdks = {
        "linux_amd64": ("22c15eae18e90a5a995dee497c3486b9/go1.24.1-20250304.4.linux-amd64.tar.gz", "b0ca85ecc435a93e2ddb626dd9ef7fb6689700a0847b0392eb3e146345a8dea0"),
        "linux_arm64": ("e256ca0c885e677ad7b8fc233798b579/go1.24.1-20250304.4.linux-arm64.tar.gz", "73b1befea457d5967632b2b0b93f8d2c0d899d5b6fbd1396c55d0a015292608b"),
        "darwin_amd64": ("f139d53d3fce534c6deb63e58e5b7be1/go1.24.1-20250304.4.darwin-amd64.tar.gz", "fa5a2d74488d99d75cd8cbd4fa8f2d892932078e92728b0b580468c95488a7c0"),
        "darwin_arm64": ("5798ae818c617e0f8bb8b4b221555997/go1.24.1-20250304.4.darwin-arm64.tar.gz", "fe669bea5d0b4a45b135f00ff83e57fb3dc61bc9f96e9d9f001f918d938fbc54"),
    },
    urls = ["https://download.visualstudio.microsoft.com/download/pr/f3428561-0ec5-4554-8c3e-f77ccc696490/{}"],
    version = "1.24.1",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//bazel/thirdparty:go.work")

# TODO(bazel): Upstream this so we can remove this obscure workaround.
go_deps.gazelle_override(
    directives = [
        "gazelle:resolve go google.golang.org/protobuf/types/pluginpb @org_golang_google_protobuf//types/pluginpb",
    ],
    path = "github.com/bufbuild/protocompile",
)
use_repo(
    go_deps,
    "build_buf_gen_go_redpandadata_cloud_connectrpc_go",
    "build_buf_gen_go_redpandadata_cloud_protocolbuffers_go",
    "build_buf_gen_go_redpandadata_common_protocolbuffers_go",
    "build_buf_gen_go_redpandadata_dataplane_connectrpc_go",
    "build_buf_gen_go_redpandadata_dataplane_protocolbuffers_go",
    "build_buf_gen_go_redpandadata_gatekeeper_connectrpc_go",
    "build_buf_gen_go_redpandadata_gatekeeper_protocolbuffers_go",
    "com_connectrpc_connect",
    "com_github_actgardner_gogen_avro_v10",
    "com_github_alecaivazis_survey_v2",
    "com_github_avast_retry_go",
    "com_github_aws_aws_sdk_go",
    "com_github_beevik_ntp",
    "com_github_bufbuild_protocompile",
    "com_github_coreos_go_systemd_v22",
    "com_github_docker_docker",
    "com_github_docker_go_connections",
    "com_github_docker_go_units",
    "com_github_fatih_color",
    "com_github_google_uuid",
    "com_github_hamba_avro",
    "com_github_hamba_avro_v2",
    "com_github_hashicorp_go_multierror",
    "com_github_kballard_go_shellquote",
    "com_github_kr_pretty",
    "com_github_kr_text",
    "com_github_lestrrat_go_jwx_v2",
    "com_github_linkedin_goavro_v2",
    "com_github_lorenzosaino_go_sysctl",
    "com_github_mattn_go_isatty",
    "com_github_moby_term",
    "com_github_opencontainers_go_digest",
    "com_github_opencontainers_image_spec",
    "com_github_parquet_go_parquet_go",
    "com_github_pkg_browser",
    "com_github_pkg_errors",
    "com_github_prometheus_client_model",
    "com_github_prometheus_common",
    "com_github_redpanda_data_common_go_rpadmin",
    "com_github_redpanda_data_redpanda_src_transform_sdk_go_transform",
    "com_github_rs_xid",
    "com_github_safchain_ethtool",
    "com_github_santhosh_tekuri_jsonschema_v6",
    "com_github_schollz_progressbar_v3",
    "com_github_segmentio_encoding",
    "com_github_sergi_go_diff",
    "com_github_spf13_afero",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_stretchr_testify",
    "com_github_testcontainers_testcontainers_go",
    "com_github_testcontainers_testcontainers_go_modules_redpanda",
    "com_github_tklauser_go_sysconf",
    "com_github_twmb_franz_go",
    "com_github_twmb_franz_go_pkg_kadm",
    "com_github_twmb_franz_go_pkg_kmsg",
    "com_github_twmb_franz_go_pkg_sr",
    "com_github_twmb_franz_go_plugin_kzap",
    "com_github_twmb_tlscfg",
    "com_github_twmb_types",
    "com_google_cloud_go_compute_metadata",
    "in_gopkg_yaml_v3",
    "io_k8s_api",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
    "org_golang_google_protobuf",
    "org_golang_x_exp",
    "org_golang_x_sync",
    "org_golang_x_sys",
    "org_golang_x_term",
    "org_uber_go_zap",
)

# ====================================
# Rust Toolchain
# ====================================
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    extra_target_triples = [
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
    ],
    versions = ["1.80.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//bazel/thirdparty:Cargo.lock",
    manifests = ["//bazel/thirdparty:Cargo.toml"],
    supported_platform_triples = [
        # We currently only build this rust code on linux
        # so don't fetch for other platforms
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
    ],
)
use_repo(crate, "crates")
crate.annotation(
    additive_build_file = "//bazel/thirdparty:wasmtime.BUILD",
    crate = "wasmtime-c-api-impl",
    extra_aliased_targets = {"wasmtime_c": "wasmtime_c"},
    gen_build_script = "off",
)

# ====================================
# OCI Base Images
# ====================================
bazel_dep(name = "rules_oci", version = "2.0.1", dev_dependency = True)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Use a distroless docker image that only comes with the following:
#
# ca-certificates
# /etc/passwd entry for a root user
# /tmp directory
# tzdata
# glibc
# libgcc1
oci.pull(
    name = "distroless_cc_debian12",
    # This is the latest nonroot tag
    digest = "sha256:594b5200fd1f06d17a877ebee16d4af84a9a7ab83c898632a2d5609c0593cbab",
    image = "gcr.io/distroless/cc-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(
    oci,
    "distroless_cc_debian12",
    "distroless_cc_debian12_linux_amd64",
    "distroless_cc_debian12_linux_arm64_v8",
)

# ====================================
# clang-tidy
# ====================================
bazel_dep(name = "bazel_clang_tidy", dev_dependency = True)
git_override(
    module_name = "bazel_clang_tidy",
    commit = "db677011c7363509a288a9fb3bf0a50830bbf791",
    remote = "https://github.com/erenon/bazel_clang_tidy.git",
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "minio",
    executable = True,
    integrity = "sha256-zr1iiuhZtGcN6cBLDL9WAKSYFm2iAxrWNMmHII2JrpQ=",
    urls = ["https://dl.min.io/server/minio/release/linux-amd64/archive/minio.RELEASE.2025-04-03T14-56-28Z"],
)
